# vortai

./: README.md  pyproject.toml  requirements.txt
.github/actions/test/: action.yml
deploy/static/web/: index.html
deploy/static/web/templates/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
vortai/: __init__.py
